--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
         max-height: 900px;
         background-color:black;
         height:90vh;
-        background-image:url("images/PngItem_5311716.png");
+        background-image:url("PngItem_5311716.png");
         background-size:500px 400px;
        background-position:right;
        background-repeat: no-repeat;
